--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "explorer http://localhost:3000 & next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "denque": "^2.0.1",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "eslint-config-next": "^13.2.4",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.32.12"
   },
   "devDependencies": {
+    "@types/node": "18.15.10",
     "@types/react": "^17.0.5",
-    "typescript": "^4.2.4"
+    "typescript": "^5.0.2"
   }
 }
